--- a/Prediccion/templates/index.html
+++ b/Prediccion/templates/index.html
@@ -39,7 +39,7 @@
     </nav>
 
    <!-- Hero Section -->
-    <section class="hero bg-primary text-white text-center py-5">
+    <section class="hero bg-black text-white text-center py-5">
       <div class="container">
         <div class="text-start">
           <h2 class="display-4">Predice la Deserción Estudiantil con Nuestra Aplicación</h2>
