--- a/Prediccion/templates/base.html
+++ b/Prediccion/templates/base.html
@@ -76,7 +76,7 @@
             <div class="list-group list-group-flush">
                 <a href="#" class="list-group-item list-group-item-action bg-light">Inicio</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Gestión periodos</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Gestión de mallas curriculares</a>
+                    <a href="{% url 'administracion_malla' %}" class="list-group-item list-group-item-action bg-light">Gestión de mallas curriculares</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Simulación</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Modelo matemático</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Opciones Visuales</a>
