--- a/Prediccion/templates/nueva_malla.html
+++ b/Prediccion/templates/nueva_malla.html
@@ -5,23 +5,54 @@
     Nueva Malla
 {% endblock %}
 
-{% block extra_css %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-{% endblock %}
-
 {% block content %}
     <div class="container">
-        <h1>Nueva Malla Curricular</h1>
-        <form method="post">
+        <h1 class="text-center">Nueva Malla Curricular</h1>
+        <form method="post" class="needs-validation" novalidate>
             {% csrf_token %}
-            {{ malla_form.as_p }}
-            <div class="form-group">
-                <label for="num_cycles">Número de ciclos:</label>
-                <input type="number" class="form-control" id="num_cycles" name="num_cycles" min="1" required>
+
+            <!-- Malla Curricular Fields -->
+            <div class="row">
+                <div class="col-md-6">
+                    {{ malla_form.codigo.errors }}
+                    <label for="{{ malla_form.codigo.id_for_label }}">Código:</label>
+                    {{ malla_form.codigo }}
+                </div>
+                <div class="col-md-6">
+                    {{ malla_form.nombre_malla.errors }}
+                    <label for="{{ malla_form.nombre_malla.id_for_label }}">Nombre de la Malla:</label>
+                    {{ malla_form.nombre_malla }}
+                </div>
             </div>
-            <button type="button" class="btn btn-primary mb-3" onclick="createCycleTabs()">Aceptar</button>
+
+            <div class="row mt-3">
+                <div class="col-md-6">
+                    {{ malla_form.tituloOtorgado.errors }}
+                    <label for="{{ malla_form.tituloOtorgado.id_for_label }}">Título Otorgado:</label>
+                    {{ malla_form.tituloOtorgado }}
+                </div>
+                <div class="col-md-6">
+                    <!-- Número de ciclos -->
+                    <div class="input-group mt-4">
+                        <input type="number" class="form-control" id="num_cycles" name="num_cycles" min="1" placeholder="Número de ciclos" aria-label="Número de ciclos" aria-describedby="button-addon1" required>
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon1" onclick="createCycleTabs()">Aceptar</button>
+                        </div>
+                        <div class="invalid-feedback">
+                            Por favor, ingresa un número válido de ciclos.
+                        </div>
+                        <div class="valid-feedback">
+                            Número de ciclos válido.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tabs de Ciclos -->
             <div id="cycle_tabs"></div>
-            <button type="submit" class="btn btn-success">Guardar Malla</button>
+
+            <!-- Botón de guardar -->
+            <button type="submit" class="btn btn-success mt-3">Guardar Malla</button>
         </form>
     </div>
 
@@ -36,15 +67,27 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form id="asignaturaForm">
+                    <form id="asignaturaForm" class="needs-validation" novalidate>
                         {% csrf_token %}
-                        <div class="form-group">
+                        <div class="form-group position-relative">
                             <label for="codigo_asignatura_modal">Código de Asignatura:</label>
                             <input type="text" class="form-control" id="codigo_asignatura_modal" name="codigo_asignatura_modal" required>
+                            <div class="invalid-feedback">
+                                Por favor, ingresa un código válido.
+                            </div>
+                            <div class="valid-feedback">
+                                Código de asignatura válido.
+                            </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group position-relative">
                             <label for="nombre_asignatura_modal">Nombre de Asignatura:</label>
                             <input type="text" class="form-control" id="nombre_asignatura_modal" name="nombre_asignatura_modal" required>
+                            <div class="invalid-feedback">
+                                Por favor, ingresa un nombre válido.
+                            </div>
+                            <div class="valid-feedback">
+                                Nombre de asignatura válido.
+                            </div>
                         </div>
                     </form>
                 </div>
