--- a/Prediccion/templates/confirmar_malla.html
+++ b/Prediccion/templates/confirmar_malla.html
@@ -32,7 +32,7 @@
                     </div>
 
                     <button type="submit" class="btn btn-success mt-4">Guardar Malla</button>
-                    <a href="{% url 'administracion_malla' %}" class="btn btn-secondary mt-4">Cancelar</a>
+                    <a href="{% url 'nueva_malla' %}" class="btn btn-secondary mt-4">Cancelar</a>
                 </form>
             </div>
         </div>
