adición de pestañas a los ciclos

--- a/Prediccion/templates/nueva_malla.html
+++ b/Prediccion/templates/nueva_malla.html
@@ -70,7 +70,8 @@
                     Ciclos y Asignaturas
                 </div>
                 <div class="card-body">
-                    <div id="cycle_tabs"></div>
+                    <ul class="nav nav-tabs" id="cycleTabs" role="tablist"></ul>
+                    <div class="tab-content" id="cycleTabsContent"></div>
                 </div>
             </div>
 
@@ -81,7 +82,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="asignaturaModal" tabindex="-1" role="dialog" aria-labelledby="asignaturaModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="asignaturaModalLabel">Agregar Asignatura</h5>
