Importación datos excel

--- a/Prediccion/templates/base.html
+++ b/Prediccion/templates/base.html
@@ -75,9 +75,8 @@
             </div>
             <div class="list-group list-group-flush">
                 <a href="#" class="list-group-item list-group-item-action bg-light">Inicio</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Gestión periodos</a>
-                    <a href="{% url 'administracion_malla' %}" class="list-group-item list-group-item-action bg-light">Gestión de mallas curriculares</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Simulación</a>
+                <a href="{% url 'administracion_malla' %}" class="list-group-item list-group-item-action bg-light">Gestión de mallas curriculares</a>
+                <a href="{% url 'importar_datos' %}" class="list-group-item list-group-item-action bg-light">Registros</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Modelo matemático</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Opciones Visuales</a>
             </div>
