--- a/Prediccion/static/css/administracion_malla.css
+++ b/Prediccion/static/css/administracion_malla.css
@@ -1,4 +1,7 @@
 .centered {
-    text-align: center; !important;
-    vertical-align: middle; !important;
+    text-align: center;
+}
+
+.align-middle {
+    vertical-align: middle !important;
 }
