--- a/Prediccion/templates/administracion_malla.html
+++ b/Prediccion/templates/administracion_malla.html
@@ -16,15 +16,15 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="table-responsive">
-                    <table id="datatable-mallas" class="table">
+                    <table id="datatable-mallas" class="table table-striped table-hover">
                         <caption>Lista de Mallas</caption>
                         <thead>
                             <tr>
-                                <th class="centered">#</th>
-                                <th class="centered">Código</th>
-                                <th class="centered">Nombre</th>
-                                <th class="centered">Título</th>
-                                <th class="centered">Opciones</th>
+                                <th class="text-center">#</th>
+                                <th class="text-center">Código</th>
+                                <th class="text-center">Nombre</th>
+                                <th class="text-center">Título</th>
+                                <th class="text-center">Opciones</th>
                             </tr>
                         </thead>
                         <tbody id="tableBody_mallas"></tbody>
