estilos de base

--- a/Prediccion/templates/administracion_malla.html
+++ b/Prediccion/templates/administracion_malla.html
@@ -10,6 +10,12 @@
 {% endblock %}
 
 {% block content %}
+    <nav style="--bs-breadcrumb-divider: '▶';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Inicio</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Administración de Mallas</li>
+        </ol>
+    </nav>
     <h2 class="text-center">Administración de Mallas</h2>
     <a href="{% url 'nueva_malla' %}" class="btn btn-primary">Nueva Malla</a>
     <div class="container mt-4">
