--- a/Prediccion/templates/base.html
+++ b/Prediccion/templates/base.html
@@ -1,122 +1,102 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Slide Menu{% endblock %}</title>
-    <!-- Google fonts - icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>{% block title %}TrackGuard{% endblock %}</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.slim.js" integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
-    <style>
-        body {
-            overflow-x: hidden;
-        }
-        #sidebar-wrapper {
-            min-height: 100vh;
-            width: 250px;
-            transition: all 0.3s ease;
-            background: #add8e6;
-            padding: 20px;
-            position: fixed;
-            left: 0;
-            top: 0;
-        }
-        #sidebar-wrapper .list-group {
-            width: 100%;
-        }
-        #page-content-wrapper {
-            margin-left: 250px;
-            width: calc(100% - 250px);
-            transition: all 0.3s ease;
-        }
-        #wrapper.toggled #sidebar-wrapper {
-            margin-left: -250px;
-        }
-        #wrapper.toggled #page-content-wrapper {
-            margin-left: 0;
-            width: 100%;
-        }
-        .sidebar-heading {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px 0;
-            background-color: #6495ed;
-            border-radius: 10px;
-            color: white;
-            margin-bottom: 20px;
-        }
-        .sidebar-heading img {
-            border-radius: 50%;
-            margin-right: 10px;
-        }
-        .btn-toggle {
-            display: block;
-            background-color: #6495ed;
-            border: none;
-            color: white;
-            margin-left: 20px;
-            margin-top: 20px;
-        }
-    </style>
+
+    <!-- LineIcons -->
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
+
+    <!-- Estilos base -->
+    <link rel="stylesheet" href="{% static 'css/estilos_base.css' %}">
 
     {% block extra_css %}{% endblock %}
 </head>
-<body>
-    <div class="d-flex" id="wrapper">
-        <!-- Sidebar -->
-        <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading">
-                <img src="https://via.placeholder.com/40" alt="User Image">
-                José Antonio de Sucre
-            </div>
-            <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action bg-light">Inicio</a>
-                <a href="{% url 'administracion_malla' %}" class="list-group-item list-group-item-action bg-light">Gestión de mallas curriculares</a>
-                <a href="{% url 'administracion_periodo' %}" class="list-group-item list-group-item-action bg-light">Gestion de periodos academicos</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Modelo matemático</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Opciones Visuales</a>
-            </div>
-        </div>
-        <!-- /#sidebar-wrapper -->
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="container-fluid">
-                <div>
-                    <button class="btn btn-toggle float-start" id="menu-toggle">
-                        <i class="material-icons">menu</i>
-                    </button>
-                    <div class="clearfix"></div> <!-- Clearfix para que el contenido no se superponga con el botón -->
+<body>
+    <div class="wrapper">
+        <aside id="sidebar">
+            <div class="d-flex">
+                <button class="toggle-btn" type="button">
+                    <i class="lni lni-menu"></i>
+                </button>
+                <div class="sidebar-logo">
+                    <a href="#">TrackGuard</a>
                 </div>
+            </div>
+            <ul class="sidebar-nav">
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <i class="lni lni-home"></i>
+                        <span>Inicio</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="{% url 'administracion_malla' %}" class="sidebar-link">
+                        <i class="lni lni-library"></i>
+                        <span>Gestión de mallas curriculares</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="{% url 'administracion_periodo' %}" class="sidebar-link">
+                        <i class="lni lni-calendar"></i>
+                        <span>Gestión de periodos académicos</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <i class="lni lni-calculator"></i>
+                        <span>Modelo matemático</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <i class="lni lni-cog"></i>
+                        <span>Opciones Visuales</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <i class="lni lni-user"></i>
+                        <span>Perfil</span>
+                    </a>
+                </li>
+            </ul>
+            <div class="sidebar-footer">
+                <a href="{% url 'logout' %}" class="sidebar-link">
+                    <i class="lni lni-exit"></i>
+                    <span>Logout</span>
+                </a>
+            </div>
+        </aside>
+        <div class="main p-3">
+            <div class="container-fluid">
                 {% block content %}
                     <!-- Aquí va el contenido de cada página -->
                 {% endblock %}
             </div>
         </div>
-
-        <!-- /#page-content-wrapper -->
     </div>
 
-    <!-- Bootstrap js-->
+    <!-- Scripts -->
+    <script src="{% static 'js/base_script.js' %}"></script>
+
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <!-- popperjs  -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 
-    <!-- Script para el menú lateral -->
-    <script>
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-    </script>
-
     {% block extra_js %}
-
     {% endblock %}
 </body>
 </html>
