--- a/Prediccion/templates/confirmar_malla.html
+++ b/Prediccion/templates/confirmar_malla.html
@@ -2,6 +2,15 @@
 
 {% block content %}
     <div class="container">
+    <nav style="--bs-breadcrumb-divider: '▶';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'administracion_malla' %}">Administración de Mallas</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'nueva_malla'%}">Nueva Malla</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Confirmar Malla</li>
+        </ol>
+    </nav>
+
         <h1 class="my-4">Confirmar Malla Curricular</h1>
 
         <div class="card">
