--- a/Prediccion/templates/import_data.html
+++ b/Prediccion/templates/import_data.html
@@ -17,6 +17,14 @@
 {% endblock %}
 
 {% block content %}
+     <nav style="--bs-breadcrumb-divider: '▶';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Inicio</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'administracion_periodo' %}">Administración de Periodos</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Nuevo Registro</li>
+        </ol>
+    </nav>
+
 <div class="container mt-5">
     <h2>Nuevo Registro de Periodo Acedemico</h2>
     <form method="post" enctype="multipart/form-data" action="{% url 'importar_datos' %}">
