--- a/Prediccion/templates/import_data.html
+++ b/Prediccion/templates/import_data.html
@@ -12,6 +12,11 @@
     }
     .upload-box:hover {
         background-color: #f9f9f9;
+        border-color: #26af07;
+    }
+    .upload-box.dragover {
+        border-color: #26af07;
+        background-color: #eee;
     }
 </style>
 {% endblock %}
@@ -27,11 +32,12 @@
 
 <div class="container mt-5">
     <h2>Nuevo Registro de Periodo Acedemico</h2>
-    <form method="post" enctype="multipart/form-data" action="{% url 'importar_datos' %}">
+    <form id="registro-form" method="post" enctype="multipart/form-data" action="{% url 'importar_datos' %}">
         {% csrf_token %}
         <div class="mb-3">
             <label for="malla_curricular" class="form-label">Malla Curricular</label>
             <select class="form-select" id="malla_curricular" name="malla">
+                <option value="">Seleccione una Malla Curricular</option>
                 {% for malla in mallas %}
                     <option value="{{ malla.id }}">{{ malla.nombre_malla }}</option>
                 {% endfor %}
@@ -78,91 +84,6 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-    const uploadBox = document.getElementById('upload-box');
-    const fileInput = document.getElementById('archivo_excel');
-
-    // Evento de clic en el cuadro de carga para activar el input file
-    uploadBox.addEventListener('click', function () {
-        fileInput.click();
-    });
-
-    // Manejar el cambio de archivo seleccionado
-    fileInput.addEventListener('change', function (event) {
-        const file = event.target.files[0];
-        if (file) {
-            uploadBox.querySelector('p').innerText = file.name;
-
-            const formData = new FormData();
-            formData.append('archivo', file);
-
-            // Enviar archivo al servidor para procesamiento
-            fetch("{% url 'procesar_excel' %}", {
-                method: 'POST',
-                body: formData,
-                headers: {
-                    'X-CSRFToken': '{{ csrf_token }}',
-                }
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    document.getElementById('fecha_inicio').value = new Date(data.fecha_inicio).toISOString().split('T')[0];
-                    document.getElementById('fecha_fin').value = new Date(data.fecha_fin).toISOString().split('T')[0];
-
-                    // Verificar si desertores tiene un valor antes de asignarlo
-                    if (data.desertores !== undefined) {
-                        document.getElementById('desertores').value = data.desertores;
-                    } else {
-                        console.log('No se encontró el valor de desertores en los datos recibidos.');
-                    }
-
-                    document.getElementById('periodo_academico').value = data.periodo_academico_id;
-
-                    const historicoTableBody = document.getElementById('historico-table-body');
-                    historicoTableBody.innerHTML = ''; // Limpiar tabla antes de agregar nuevos datos
-
-                    data.historico.forEach(row => {
-                        const newRow = `
-                            <tr>
-                                <td>${row.asignatura}</td>
-                                <td>${row.matriculados}</td>
-                                <td>${row.aprobados}</td>
-                                <td>${row.reprobados}</td>
-                                <td>${row.aplazadores}</td>
-                                <td>${row.abandonaron}</td>
-                            </tr>`;
-                        historicoTableBody.innerHTML += newRow;
-                    });
-                } else {
-                    alert('Hubo un problema al procesar el archivo.');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        }
-    });
-
-    const form = document.querySelector('form');
-    form.addEventListener('submit', function (event) {
-        const malla = document.getElementById('malla_curricular').value;
-        const file = fileInput.files[0];
-
-        if (!malla) {
-            event.preventDefault();
-            alert('Seleccione una Malla Curricular.');
-            return;
-        }
-
-        if (!file) {
-            event.preventDefault();
-            alert('Seleccione un archivo Excel.');
-            return;
-        }
-    });
-});
-</script>
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="{% static 'js/import_datos.js' %}"></script>
 {% endblock %}
